--- a/index.html
+++ b/index.html
@@ -9,109 +9,139 @@
     , initial-scale=1.0"
     />
     <title>Web Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo link" href="./index.html">
+          <span class="logo-web">Web</span
+          ><span class="logo-studio">Studio</span>
+        </a>
         <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li class="list">
+            <a class="link nav" href="./index.html">
+              <span class="current-page">Studio</span>
+            </a>
+          </li>
+          <li class="list">
+            <a class="link nav" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="list nav"><a class="link nav" href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="list">
+            <a class="link contacts" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="list">
+            <a class="link contacts" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="headline">Effective Solutions for Your Business</h1>
+        <button class="main-button button" type="button">Order Service</button>
       </section>
-      <section>
-        <h2 hidden>Features</h2>
+      <div class="main-background">
+        <section>
+          <h2 hidden>Features</h2>
+          <ul>
+            <li class="list">
+              <h3 class="feature-title">Strategy</h3>
+              <p class="description">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="list">
+              <h3 class="feature-title">Punctuality</h3>
+              <p class="description">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="list">
+              <h3 class="feature-title">Diligence</h3>
+              <p class="description">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="list">
+              <h3 class="feature-title">Technologies</h3>
+              <p class="description">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h2 class="title-doing">What are we doing</h2>
+          <ul>
+            <li class="list">
+              <img src="./images/img1.jpg" alt="laptop screen" width="360" />
+            </li>
+            <li class="list">
+              <img src="./images/img2.jpg" alt="phone screen" width="360" />
+            </li>
+            <li class="list">
+              <img
+                src="./images/img3.jpg"
+                alt="laptop and phone screens"
+                width="360"
+              />
+            </li>
+          </ul>
+        </section>
+      </div>
+
+      <section class="team-background">
+        <h2 class="team-title">Our Team</h2>
         <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
-            <img src="./images/img1.jpg" alt="laptop screen" width="360" />
-          </li>
-          <li>
-            <img src="./images/img2.jpg" alt="phone screen" width="360" />
-          </li>
-          <li>
-            <img
-              src="./images/img3.jpg"
-              alt="laptop and phone screens"
-              width="360"
-            />
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+          <li class="list employee-card">
             <img src="./images/empl1.jpg" alt="employee1" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="employee-name">Mark Guerrero</h3>
+            <p class="employee-description">Product Designer</p>
           </li>
-          <li>
+          <li class="list employee-card">
             <img src="./images/empl2.jpg" alt="employee2" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="employee-name">Tom Ford</h3>
+            <p class="employee-description">Frontend Developer</p>
           </li>
-          <li>
+          <li class="list employee-card">
             <img src="./images/empl3.jpg" alt="employee3" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="employee-name">Camila Garcia</h3>
+            <p class="employee-description">Marketing</p>
           </li>
-          <li>
+          <li class="list employee-card">
             <img src="./images/empl4.jpg" alt="employee4" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="employee-name">Daniel Wilson</h3>
+            <p class="employee-description">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo link" href="./index.html">
+        <span class="logo-web">Web</span
+        ><span class="logo-studio bottom-logo">Studio</span>
+      </a>
+      <p class="bottom-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
