--- a/portfolio.html
+++ b/portfolio.html
@@ -5,27 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo link" href="./index.html">
+          <span class="logo-web">Web</span
+          ><span class="logo-studio">Studio</span>
+        </a>
         <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li class="list">
+            <a class="link nav" href="./index.html">Studio</a>
+          </li>
+          <li class="list">
+            <a class="link nav" href="./portfolio.html">
+              <span class="current-page">Portfolio</span>
+            </a>
+          </li>
+          <li class="list nav"><a class="link nav" href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="list">
+            <a class="link contacts" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="list">
+            <a class="link contacts" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
       <section>
-        <h1></h1>
+        <h1 hidden>Portfolio navigation</h1>
         <ul>
           <li><button type="button">All</button></li>
           <li><button type="button">Web Site</button></li>
@@ -113,11 +137,16 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <footer class="footer">
+        <a class="logo link" href="./index.html">
+          <span class="logo-web">Web</span
+          ><span class="logo-studio bottom-logo">Studio</span>
+        </a>
+        <p class="bottom-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </footer>
     </footer>
   </body>
 </html>
