--- a/index.html
+++ b/index.html
@@ -56,59 +56,58 @@
         <h1 class="headline">Effective Solutions for Your Business</h1>
         <button class="main-button button" type="button">Order Service</button>
       </section>
-      <div class="main-background">
-        <section>
-          <h2 hidden>Features</h2>
-          <ul>
-            <li class="list">
-              <h3 class="feature-title">Strategy</h3>
-              <p class="description">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </li>
-            <li class="list">
-              <h3 class="feature-title">Punctuality</h3>
-              <p class="description">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li class="list">
-              <h3 class="feature-title">Diligence</h3>
-              <p class="description">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li class="list">
-              <h3 class="feature-title">Technologies</h3>
-              <p class="description">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </li>
-          </ul>
-        </section>
-        <section>
-          <h2 class="title-doing">What are we doing</h2>
-          <ul>
-            <li class="list">
-              <img src="./images/img1.jpg" alt="laptop screen" width="360" />
-            </li>
-            <li class="list">
-              <img src="./images/img2.jpg" alt="phone screen" width="360" />
-            </li>
-            <li class="list">
-              <img
-                src="./images/img3.jpg"
-                alt="laptop and phone screens"
-                width="360"
-              />
-            </li>
-          </ul>
-        </section>
-      </div>
+
+      <section>
+        <h2 hidden>Features</h2>
+        <ul>
+          <li class="list">
+            <h3 class="feature-title">Strategy</h3>
+            <p class="description">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li class="list">
+            <h3 class="feature-title">Punctuality</h3>
+            <p class="description">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li class="list">
+            <h3 class="feature-title">Diligence</h3>
+            <p class="description">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li class="list">
+            <h3 class="feature-title">Technologies</h3>
+            <p class="description">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2 class="title-doing">What are we doing</h2>
+        <ul>
+          <li class="list">
+            <img src="./images/img1.jpg" alt="laptop screen" width="360" />
+          </li>
+          <li class="list">
+            <img src="./images/img2.jpg" alt="phone screen" width="360" />
+          </li>
+          <li class="list">
+            <img
+              src="./images/img3.jpg"
+              alt="laptop and phone screens"
+              width="360"
+            />
+          </li>
+        </ul>
+      </section>
 
       <section class="team-background">
         <h2 class="team-title">Our Team</h2>
