--- a/portfolio.html
+++ b/portfolio.html
@@ -51,86 +51,98 @@
       <section>
         <h1 hidden>Portfolio navigation</h1>
         <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+          <li class="list">
+            <button class="button filter-button" type="button">All</button>
+          </li>
+          <li class="list">
+            <button class="button filter-button" type="button">Web Site</button>
+          </li>
+          <li class="list">
+            <button class="button filter-button" type="button">App</button>
+          </li>
+          <li class="list">
+            <button class="button filter-button" type="button">Design</button>
+          </li>
+          <li class="list">
+            <button class="button filter-button" type="button">
+              Marketing
+            </button>
+          </li>
         </ul>
 
         <ul>
-          <li>
-            <a href="">
+          <li class="list">
+            <a class="link" href="">
               <img src="./images/prtf1.jpg" alt="bank app" width="360" />
-              <h2>Banking App Interface Concept</h2>
-              <p>App</p>
+              <h2 class="name-of-project">Banking App Interface Concept</h2>
+              <p class="filtered-type">App</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="list">
+            <a class="link" href="">
               <img src="./images/prtf2.jpg" alt="qrcode scan" width="360" />
-              <h2>Cashless Payment</h2>
-              <p>Marketing</p>
+              <h2 class="name-of-project">Cashless Payment</h2>
+              <p class="filtered-type">Marketing</p>
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="list">
+            <a class="link" href="">
               <img
                 src="./images/prtf3.jpg"
                 alt="laptop and phone screens"
                 width="360"
               />
-              <h2>Meditation App</h2>
-              <p>App</p></a
+              <h2 class="name-of-project">Meditation App</h2>
+              <p class="filtered-type">App</p></a
             >
           </li>
-          <li>
-            <a href="">
+          <li class="list">
+            <a class="link" href="">
               <img src="./images/prtf4.jpg" alt="car wheel" width="360" />
-              <h2>Taxi Service</h2>
-              <p>Marketing</p></a
+              <h2 class="name-of-project">Taxi Service</h2>
+              <p class="filtered-type">Marketing</p></a
             >
           </li>
-          <li>
-            <a href="">
+          <li class="list">
+            <a class="link" href="">
               <img
                 src="./images/prtf5.jpg"
                 alt="phone wallpapers"
                 width="360"
               />
-              <h2>Screen Illustrations</h2>
-              <p>Design</p></a
+              <h2 class="name-of-project">Screen Illustrations</h2>
+              <p class="filtered-type">Design</p></a
             >
           </li>
-          <li>
-            <a href="">
+          <li class="list">
+            <a class="link" href="">
               <img src="./images/prtf6.jpg" alt="happy girl" width="360" />
-              <h2>Online Courses</h2>
-              <p>Marketing</p></a
+              <h2 class="name-of-project">Online Courses</h2>
+              <p class="filtered-type">Marketing</p></a
             >
           </li>
-          <li>
-            <a href="">
+          <li class="list">
+            <a class="link" href="">
               <img src="./images/prtf7.jpg" alt="tepmlates" width="360" />
-              <h2>Instagram Stories Concept</h2>
-              <p>Design</p></a
+              <h2 class="name-of-project">Instagram Stories Concept</h2>
+              <p class="filtered-type">Design</p></a
             >
           </li>
-          <li>
-            <a href="">
+          <li class="list">
+            <a class="link" href="">
               <img
                 src="./images/prtf8.jpg"
                 alt="girl holding a bag with vegetables"
               />
-              <h2>Organic Food</h2>
-              <p>Web Site</p></a
+              <h2 class="name-of-project">Organic Food</h2>
+              <p class="filtered-type">Web Site</p></a
             >
           </li>
-          <li>
-            <a href="">
+          <li class="list">
+            <a class="link" href="">
               <img src="./images/prtf9.jpg" alt="cappuccino" />
-              <h2>Fresh Coffee</h2>
-              <p>Web Site</p></a
+              <h2 class="name-of-project">Fresh Coffee</h2>
+              <p class="filtered-type">Web Site</p></a
             >
           </li>
         </ul>
