--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
     <header>
       <nav>
         <a class="logo link" href="./index.html">
-          <span class="logo-web">Web</span
-          ><span class="logo-studio">Studio</span>
+          Web<span class="logo-studio">Studio</span>
         </a>
-        <ul>
+        <ul class="list">
           <li class="list">
             <a class="link nav" href="./index.html">
               <span class="current-page">Studio</span>
@@ -137,8 +136,7 @@
     </main>
     <footer class="footer">
       <a class="logo link" href="./index.html">
-        <span class="logo-web">Web</span
-        ><span class="logo-studio bottom-logo">Studio</span>
+        Web<span class="logo-studio bottom-logo">Studio</span>
       </a>
       <p class="bottom-text">
         Increase the flow of customers and sales for your business with digital
