--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,7 @@
     <header>
       <nav>
         <a class="logo link" href="./index.html">
-          <span class="logo-web">Web</span
-          ><span class="logo-studio">Studio</span>
+          Web<span class="logo-studio">Studio</span>
         </a>
         <ul>
           <li class="list">
@@ -151,8 +150,7 @@
     <footer>
       <footer class="footer">
         <a class="logo link" href="./index.html">
-          <span class="logo-web">Web</span
-          ><span class="logo-studio bottom-logo">Studio</span>
+          Web<span class="logo-studio bottom-logo">Studio</span>
         </a>
         <p class="bottom-text">
           Increase the flow of customers and sales for your business with
