--- a/portfolio.html
+++ b/portfolio.html
@@ -19,26 +19,26 @@
         <a class="logo link" href="./index.html">
           Web<span class="logo-studio">Studio</span>
         </a>
-        <ul>
-          <li class="list">
+        <ul class="list">
+          <li>
             <a class="link nav" href="./index.html">Studio</a>
           </li>
-          <li class="list">
+          <li>
             <a class="link nav" href="./portfolio.html">
               <span class="current-page">Portfolio</span>
             </a>
           </li>
-          <li class="list nav"><a class="link nav" href="#">Contacts</a></li>
+          <li><a class="link nav" href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li class="list">
+        <ul class="list">
+          <li>
             <a class="link contacts" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="list">
+          <li>
             <a class="link contacts" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
@@ -49,42 +49,42 @@
     <main>
       <section>
         <h1 hidden>Portfolio navigation</h1>
-        <ul>
-          <li class="list">
+        <ul class="list">
+          <li>
             <button class="button filter-button" type="button">All</button>
           </li>
-          <li class="list">
+          <li>
             <button class="button filter-button" type="button">Web Site</button>
           </li>
-          <li class="list">
+          <li>
             <button class="button filter-button" type="button">App</button>
           </li>
-          <li class="list">
+          <li>
             <button class="button filter-button" type="button">Design</button>
           </li>
-          <li class="list">
+          <li>
             <button class="button filter-button" type="button">
               Marketing
             </button>
           </li>
         </ul>
 
-        <ul>
-          <li class="list">
+        <ul class="list">
+          <li>
             <a class="link" href="">
               <img src="./images/prtf1.jpg" alt="bank app" width="360" />
               <h2 class="name-of-project">Banking App Interface Concept</h2>
               <p class="filtered-type">App</p>
             </a>
           </li>
-          <li class="list">
+          <li>
             <a class="link" href="">
               <img src="./images/prtf2.jpg" alt="qrcode scan" width="360" />
               <h2 class="name-of-project">Cashless Payment</h2>
               <p class="filtered-type">Marketing</p>
             </a>
           </li>
-          <li class="list">
+          <li>
             <a class="link" href="">
               <img
                 src="./images/prtf3.jpg"
@@ -95,14 +95,14 @@
               <p class="filtered-type">App</p></a
             >
           </li>
-          <li class="list">
+          <li>
             <a class="link" href="">
               <img src="./images/prtf4.jpg" alt="car wheel" width="360" />
               <h2 class="name-of-project">Taxi Service</h2>
               <p class="filtered-type">Marketing</p></a
             >
           </li>
-          <li class="list">
+          <li>
             <a class="link" href="">
               <img
                 src="./images/prtf5.jpg"
@@ -113,21 +113,21 @@
               <p class="filtered-type">Design</p></a
             >
           </li>
-          <li class="list">
+          <li>
             <a class="link" href="">
               <img src="./images/prtf6.jpg" alt="happy girl" width="360" />
               <h2 class="name-of-project">Online Courses</h2>
               <p class="filtered-type">Marketing</p></a
             >
           </li>
-          <li class="list">
+          <li>
             <a class="link" href="">
               <img src="./images/prtf7.jpg" alt="tepmlates" width="360" />
               <h2 class="name-of-project">Instagram Stories Concept</h2>
               <p class="filtered-type">Design</p></a
             >
           </li>
-          <li class="list">
+          <li>
             <a class="link" href="">
               <img
                 src="./images/prtf8.jpg"
@@ -137,7 +137,7 @@
               <p class="filtered-type">Web Site</p></a
             >
           </li>
-          <li class="list">
+          <li>
             <a class="link" href="">
               <img src="./images/prtf9.jpg" alt="cappuccino" />
               <h2 class="name-of-project">Fresh Coffee</h2>
