--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
           Web<span class="logo-studio">Studio</span>
         </a>
         <ul class="list">
-          <li class="list">
-            <a class="link nav" href="./index.html">
-              <span class="current-page">Studio</span>
+          <li>
+            <a class="link nav" href="./index.html">Studio</a>
+          </li>
+          <li>
+            <a class="link nav" href="./portfolio.html">
+              <span class="current-page">Portfolio</span>
             </a>
           </li>
-          <li class="list">
-            <a class="link nav" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="list nav"><a class="link nav" href="#">Contacts</a></li>
+          <li><a class="link nav" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li class="list">
+      <address class="contacts-nav">
+        <ul class="list">
+          <li>
             <a class="link contacts" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="list">
+          <li>
             <a class="link contacts" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
@@ -58,29 +58,29 @@
 
       <section>
         <h2 hidden>Features</h2>
-        <ul>
-          <li class="list">
+        <ul class="list">
+          <li>
             <h3 class="feature-title">Strategy</h3>
             <p class="description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="list">
+          <li>
             <h3 class="feature-title">Punctuality</h3>
             <p class="description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="list">
+          <li>
             <h3 class="feature-title">Diligence</h3>
             <p class="description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="list">
+          <li>
             <h3 class="feature-title">Technologies</h3>
             <p class="description">
               Design practice focused on digital experiences. We bring forth a
@@ -91,14 +91,14 @@
       </section>
       <section>
         <h2 class="title-doing">What are we doing</h2>
-        <ul>
-          <li class="list">
+        <ul class="list">
+          <li>
             <img src="./images/img1.jpg" alt="laptop screen" width="360" />
           </li>
-          <li class="list">
+          <li>
             <img src="./images/img2.jpg" alt="phone screen" width="360" />
           </li>
-          <li class="list">
+          <li>
             <img
               src="./images/img3.jpg"
               alt="laptop and phone screens"
