--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,10 @@
               <span class="current-page">Portfolio</span>
             </a>
           </li>
-          <li><a class="link nav" href="#">Contacts</a></li>
+          <li><a class="link nav" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts-nav">
         <ul class="list">
           <li>
             <a class="link contacts" href="mailto:info@devstudio.com"
@@ -147,16 +147,14 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <footer class="footer">
-        <a class="logo link" href="./index.html">
-          Web<span class="logo-studio bottom-logo">Studio</span>
-        </a>
-        <p class="bottom-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </footer>
+    <footer class="footer">
+      <a class="logo link" href="./index.html">
+        Web<span class="logo-studio bottom-logo">Studio</span>
+      </a>
+      <p class="bottom-text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
