--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         </a>
         <ul class="list">
           <li>
-            <a class="link nav" href="./index.html">Studio</a>
+            <a class="link nav" href="./index.html"> <span class="current-page"></span>Studio</span></a>
           </li>
           <li>
             <a class="link nav" href="./portfolio.html">
-              <span class="current-page">Portfolio</span>
+              Portfolio
             </a>
           </li>
           <li><a class="link nav" href="">Contacts</a></li>
