--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         </a>
         <ul class="list">
           <li>
-            <a class="link nav" href="./index.html"> <span class="current-page"></span>Studio</span></a>
+            <a class="link nav" href="./index.html"
+              ><span class="current-page">Studio</span></a
+            >
           </li>
           <li>
-            <a class="link nav" href="./portfolio.html">
-              Portfolio
-            </a>
+            <a class="link nav" href="./portfolio.html"> Portfolio </a>
           </li>
           <li><a class="link nav" href="">Contacts</a></li>
         </ul>
