--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </section>
 
       <section>
-        <h2 hidden>Features</h2>
+        <h2 class="features-hidden" hidden>Features</h2>
         <ul class="list">
           <li>
             <h3 class="feature-title">Strategy</h3>
@@ -110,23 +110,23 @@
 
       <section class="team-background">
         <h2 class="team-title">Our Team</h2>
-        <ul>
-          <li class="list employee-card">
+        <ul class="list">
+          <li class="employee-card">
             <img src="./images/empl1.jpg" alt="employee1" width="264" />
             <h3 class="employee-name">Mark Guerrero</h3>
             <p class="employee-description">Product Designer</p>
           </li>
-          <li class="list employee-card">
+          <li class="employee-card">
             <img src="./images/empl2.jpg" alt="employee2" width="264" />
             <h3 class="employee-name">Tom Ford</h3>
             <p class="employee-description">Frontend Developer</p>
           </li>
-          <li class="list employee-card">
+          <li class="employee-card">
             <img src="./images/empl3.jpg" alt="employee3" width="264" />
             <h3 class="employee-name">Camila Garcia</h3>
             <p class="employee-description">Marketing</p>
           </li>
-          <li class="list employee-card">
+          <li class="employee-card">
             <img src="./images/empl4.jpg" alt="employee4" width="264" />
             <h3 class="employee-name">Daniel Wilson</h3>
             <p class="employee-description">UI Designer</p>
